# ai-project-playbook

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.mcp  README.md  SKILL.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: archie.md  system-review.md
.github/: CODEOWNERS  core_soul.sha256
.github/workflows/: core-soul-integrity.yml  docker-publish.yml
.playbook/: execution-order.md
.playbook/prps/: 01-template-loader.md  02-memory-bridge.md  03-smart-discovery.md  04-enriched-planning.md  05-prp-template-compliance.md  06-experience-roadmap.md  07-lesson-sync-supabase.md  08-backfill-tech-stacks.md  09-lesson-voting-tool.md  10-pgvector-embeddings.md  11-semantic-memory-bridge.md  12-preferences-in-artifacts.md  13-lesson-effectiveness.md  14-predictive-heartbeat.md
agent/: __init__.py  core_soul.py  embedding.py  handoff.py  memory_bridge.py  orchestrator.py  prp_builder.py  supabase_client.py  system_review.py  template_loader.py
agent/engines/: __init__.py  base.py  heartbeat_engine.py  memory_engine.py  router_engine.py  soul_engine.py
agent/evals/: __init__.py  artifact_evaluator.py  rules.py
agent/factory/: __init__.py  base.py  (+1 more)
data/: lessons.json
docs/: ARCHIE.md  ONBOARDING.md
mcp_server/: __init__.py  playbook_mcp.py
playbook/: README.md
references/: agent-capabilities.md  quick-navigation.md
scripts/: __init__.py  backfill_embeddings.py  backfill_tech_stacks.py  index_playbook.py  pre-commit-core-soul.ps1  pre-commit-core-soul.sh  sync_lessons_to_supabase.py
supabase/: schema.sql
(+105 files in other folders)
