[project]
name = "ai-project-playbook"
version = "0.1.0"
description = "Autonomous AI PM Agent for building scalable applications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nivanta AI", email = "dev@nivanta.ai" }
]
keywords = ["ai", "agent", "mcp", "project-management", "claude"]

dependencies = [
    # Agent Framework
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.14",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",

    # MCP Server
    "mcp>=1.0.0",
    "fastmcp>=0.0.2",

    # RAG & Embeddings
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",

    # Supabase Client
    "supabase>=2.0.0",

    # Utilities
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
playbook-mcp = "mcp_server.playbook_mcp:main"
index-playbook = "scripts.index_playbook:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "mcp_server", "scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
